vlib/v/parser/tests/invalid_fn_decl_script_err.vv
mynum := 10

fn main() {
	println(mynum)
}
